<resources>
    <string name="app_name">Authentication-app</string>
    <string name="header2">Login</string>
    <string name="paragraph3i">Fill in your login details correctly</string>
    <string name="username">Username</string>
    <string name="hintUsername">enter your username</string>
    <string name="hintUsernamei">Email or username</string>
    <string name="LoginPassword">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_account">create account</string>
    <string name="Login">LOGIN</string>
    <string name="forgot">forgot password?</string>
    <string name="proceed">DONE</string>
    <string name="email">Email address</string>
    <string name="PhoneNo">Phone Number</string>
    <string name="Password">Password</string>
    <string name="RePassword">Confirm Password</string>
    <string name="header">Create an account</string>
    <string name="paragraph">Please enter your information below</string>
    <string name="paragraph2">to create an account</string>
    <string name="createAccount">Don\'t have an account? create account</string>
    <string name="hintEmail">enter your email</string>
    <string name="hintPhoneNo">enter your phone number</string>
    <string name="greeting1">Hi there!</string>
    <string name="greeting2">welcome to my authentication app</string>
    <string name="signUp">SIGN UP</string>
</resources>