<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/header"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-40dp"
                android:text="@string/paragraph"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/header"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/paragraph2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-15dp"
                android:text="@string/paragraph2"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/paragraph"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-55dp"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/paragraph2"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/hintUsername"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="-50dp"
                android:background="@drawable/input_box"
                android:hint="@string/hintUsername"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/username"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-40dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/hintUsername"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/hintEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="-50dp"
                android:background="@drawable/input_box"
                android:hint="@string/hintEmail"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/email"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />


            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-40dp"
                android:text="@string/PhoneNo"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/hintEmail"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/hintPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="-50dp"
                android:background="@drawable/input_box"
                android:hint="@string/hintPhoneNo"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/phoneNumber"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-40dp"
                android:text="@string/Password"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/hintPhoneNumber"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="-50dp"
                android:background="@drawable/input_box"
                android:clickable="true"
                android:focusable="true"
                app:boxCornerRadiusBottomEnd="6dp"
                app:boxCornerRadiusBottomStart="6dp"
                app:boxCornerRadiusTopEnd="6dp"
                app:boxCornerRadiusTopStart="6dp"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:layout_constraintBottom_toBottomOf="@id/password"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:paddingVertical="2dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/rePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-40dp"
                android:text="@string/RePassword"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/inputPassword"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputRePassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="-50dp"
                android:background="@drawable/input_box"
                android:clickable="true"
                android:focusable="true"
                app:boxCornerRadiusBottomEnd="6dp"
                app:boxCornerRadiusBottomStart="6dp"
                app:boxCornerRadiusTopEnd="6dp"
                app:boxCornerRadiusTopStart="6dp"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:layout_constraintBottom_toBottomOf="@id/rePassword"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:paddingVertical="2dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/signupButton"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginBottom="-150dp"
                android:backgroundTint="#00FFFF"
                android:text="@string/proceed"
                android:textColor="#FF0000"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/inputRePassword"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>
