<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContextActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            android:src="@drawable/login" />


        <TextView
            android:id="@+id/try_dey_flex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="300dp"
            android:gravity="center_vertical|top"
            android:lineSpacingExtra="2sp"
            android:text="@string/greeting1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:translationY="-0.87sp" />

        <TextView
            android:id="@+id/joinTrips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/try_dey_flex"
            android:layout_centerHorizontal="true"
            android:text="@string/greeting2"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="325dp"
            android:layout_height="60dp"
            android:layout_below="@id/joinTrips"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:backgroundTint="#673AB7"
            android:text="@string/signUp"
            android:textSize="15sp"
            app:boxCornerRadiusTopEnd="6dp"
            app:boxCornerRadiusTopStart="6dp"
            app:boxCornerRadiusBottomStart="6dp"
            app:boxCornerRadiusBottomEnd="6dp"/>

        <Button
            android:id="@+id/LoginBtn1"
            android:layout_width="325dp"
            android:layout_height="60dp"
            android:layout_below="@id/signUpBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/Login"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:boxCornerRadiusTopEnd="6dp"
            app:boxCornerRadiusTopStart="6dp"
            app:boxCornerRadiusBottomStart="6dp"
            app:boxCornerRadiusBottomEnd="6dp"/>




    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>